[gd_scene load_steps=11 format=3 uid="uid://chy1yjgdcqplw"]

[ext_resource type="Script" path="res://Scripts/raccoon_scene.gd" id="1_a5oek"]
[ext_resource type="PackedScene" uid="uid://cc6vlsocdoy61" path="res://Scenes/Areas/ModularCircle.tscn" id="2_88yt1"]
[ext_resource type="PackedScene" uid="uid://86uxk2w8f6te" path="res://Scenes/Characters/player_ears.tscn" id="2_fqr4v"]
[ext_resource type="PackedScene" uid="uid://hlssl26jhl27" path="res://Scenes/Characters/Druid.tscn" id="3_3lh8a"]
[ext_resource type="PackedScene" uid="uid://bvme6p87bknvw" path="res://Scenes/Characters/Raccoon.tscn" id="4_qmtsh"]
[ext_resource type="PackedScene" uid="uid://75074s6brwaf" path="res://Scenes/Characters/Pixie.tscn" id="5_s6fus"]
[ext_resource type="PackedScene" uid="uid://b8b7h44plka7b" path="res://Scenes/Areas/path_north_south.tscn" id="5_tmolf"]
[ext_resource type="PackedScene" uid="uid://btysa7s88gvvm" path="res://Scenes/Environmentals/AppleTree.tscn" id="6_kuire"]
[ext_resource type="PackedScene" uid="uid://bblapp6yq562n" path="res://Scenes/Areas/path_ne_sw.tscn" id="8_djkys"]
[ext_resource type="PackedScene" uid="uid://pq2lksvyubd5" path="res://Scenes/UI/PauseMenu.tscn" id="10_g3jm4"]

[node name="RaccoonScene" type="Node3D" node_paths=PackedStringArray("narrate_controls", "narrate_ending", "narrate_start", "forest_ambience", "Druid_Path_Dialog", "Druid_Open_Path")]
script = ExtResource("1_a5oek")
narrate_controls = NodePath("Narrate_Controls")
narrate_ending = NodePath("Narrate_Ending")
narrate_start = NodePath("Narrate_Start")
forest_ambience = NodePath("Forest_Ambience")
Druid_Path_Dialog = NodePath("Druid_Path_Dialog")
Druid_Open_Path = NodePath("Druid_Open_Path")

[node name="player_ears" parent="." instance=ExtResource("2_fqr4v")]

[node name="Circle" parent="." instance=ExtResource("2_88yt1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.008, 0, 0)

[node name="Druid" parent="Circle" instance=ExtResource("3_3lh8a")]

[node name="Path_North-South" parent="Circle" instance=ExtResource("5_tmolf")]

[node name="North_End" parent="Circle/Path_North-South" index="1" node_paths=PackedStringArray("circle")]
circle = NodePath("../..")

[node name="Path_Sound" parent="Circle/Path_North-South/North_End" index="3"]
event = {
"id": 3768164332,
"name": "Path_North"
}

[node name="South_End" parent="Circle/Path_North-South" index="2" node_paths=PackedStringArray("circle")]
circle = NodePath("../../../Circle2")

[node name="Circle2" parent="." instance=ExtResource("2_88yt1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9)

[node name="Raccoon" parent="Circle2" node_paths=PackedStringArray("circle") instance=ExtResource("4_qmtsh")]
transform = Transform3D(-0.119686, 0, -0.992811, 0, 1, 0, 0.992811, 0, -0.119686, 0, 0, 0)
circle = NodePath("..")

[node name="Pixie" parent="Circle2" instance=ExtResource("5_s6fus")]
transform = Transform3D(0.220646, 0, 0.975354, 0, 1, 0, -0.975354, 0, 0.220646, 0, 0, 0)

[node name="Path_NE_SW" parent="Circle2" instance=ExtResource("8_djkys")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 3.14295, 9.53674e-07, -3.17603)

[node name="NE_End" parent="Circle2/Path_NE_SW" index="1" node_paths=PackedStringArray("circle")]
circle = NodePath("../..")

[node name="SW_End" parent="Circle2/Path_NE_SW" index="2" node_paths=PackedStringArray("circle")]
circle = NodePath("../../../Circle3")

[node name="Circle3" parent="." instance=ExtResource("2_88yt1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.29065, -1.90735e-06, -15.4058)

[node name="AppleTree" parent="Circle3" node_paths=PackedStringArray("circle") instance=ExtResource("6_kuire")]
transform = Transform3D(-0.78238, 0, -0.622801, 0, 1, 0, 0.622801, 0, -0.78238, 0, 0, 0)
circle = NodePath("..")

[node name="Narrate_Ending" type="AkEvent3D" parent="."]
event = {
"id": 2633894792,
"name": "Narrate_Ending"
}
stop_on = 3

[node name="Forest_Ambience" type="AkEvent3D" parent="."]
event = {
"id": 2084169529,
"name": "Forest_Ambience"
}
stop_on = 3

[node name="Narrate_Controls" type="AkEvent3D" parent="."]
event = {
"id": 2696084023,
"name": "Narrate_Controls"
}
stop_on = 3

[node name="Narrate_Start" type="AkEvent3D" parent="."]
event = {
"id": 3006996971,
"name": "Narrate_Start"
}
stop_on = 3

[node name="Druid_Path_Dialog" type="AkEvent3D" parent="."]
event = {
"id": 2335167966,
"name": "Druid_Path_Dialog"
}

[node name="Druid_Open_Path" type="AkEvent3D" parent="."]
event = {
"id": 3931060456,
"name": "Druid_Open_Path"
}

[node name="PauseMenu" parent="." instance=ExtResource("10_g3jm4")]

[connection signal="quest_complete" from="Circle/Druid" to="." method="_on_druid_quest_complete"]
[connection signal="raccoon_fed" from="Circle2/Raccoon" to="Circle2/Pixie" method="_on_raccoon_raccoon_fed"]
[connection signal="end_of_event" from="Druid_Path_Dialog" to="." method="_on_druid_path_dialog_end_of_event"]
[connection signal="end_of_event" from="Druid_Open_Path" to="." method="_on_druid_open_path_end_of_event"]

[editable path="Circle/Path_North-South"]
[editable path="Circle2/Path_NE_SW"]
